// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > files > getFiles > 200 > ok 1`] = `
{
  "files": [
    "a",
    "b",
  ],
}
`;

exports[`routes > files > getFiles > version > 200 > ok 1`] = `
{
  "files": [
    "a",
    "b",
  ],
}
`;

exports[`routes > model > getModel > latest > 200 > ok 1`] = `
{
  "modelCard": {
    "example": "test",
  },
}
`;

exports[`routes > model > getModel > version > 200 > ok 1`] = `
{
  "modelCard": {
    "_id": "test",
  },
}
`;
